<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer_group_content">
        <menu>
            <item
                android:id="@+id/drawer_zhihu"
                android:icon="@mipmap/ic_drawer_zhihu"
                android:checkable="true"
                android:checked="false"
                android:title="@string/zhihu"/>
        </menu>
    </item>
    <item android:title="@string/drawer_group_options">
        <menu>
            <item
                android:id="@+id/drawer_like"
                android:icon="@mipmap/ic_drawer_like"
                android:checkable="true"
                android:title="@string/drawer_collection"/>
            <item
                android:id="@+id/drawer_setting"
                android:checked="false"
                android:icon="@mipmap/ic_drawer_setting"
                android:checkable="true"
                android:title="@string/drawer_setting"/>
            <item
                android:id="@+id/drawer_about"
                android:icon="@mipmap/ic_drawer_about"
                android:checkable="true"
                android:title="@string/drawer_about"/>
        </menu>
    </item>
</menu>